Version 0.8.9, 2004-11-11
- ThumbnailWriter are instantiated by reflection and specified in web.xml

Version 0.8.8, 2004-09-08
- added a parameter parentlink.XXX=<link> in jGallery.properties, which generates an up-link for gallery XXX.
- if jGallery.properties is missing, use defaults

Version 0.8.7, 2004-09-05
- added URL parameter nocount=true, this prevents hit counting, useful for calling from statistics page. Added links to folders from statistics page.
- changed statistic sql to use folders left join images, so folders without image hits would be displayed, too.

Version 0.8.5, 2004-08-08
- added /Statistics page for displaying the hit counters

Version 0.8.4, 2004-07-28
- changed thumbnail generation from javax.imageio.ImageIO to com.sun.image.codec.jpeg.JPEGImageEncoder, has better quality and is vastly faster

2004-07-17
- Images would not be counted, fixed.

2004-06-16
- minor enhancement to Exif tag handling, changed Standard skin to display more focused exif data

Version 0.8.3, 2004-06-10
- jGallery now works with an arbitrary extention pattern in  
<servlet-mapping><url-pattern>

Version 0.8.2, 2004-06-05
- Bugfix: Image folders below the jGallery context would not work
- more documentation updates

Version 0.8.1, 2004-06-04
- included JAlbum's Standard Skin into distribution
- documentation updates: Quickstart and Recommended Setup



